@@ -1,3 +1,5 @@
+20070407
+	/os/port/^(portdat.h lib.h portfns.h xalloc.c) compatiblity changes with plan 9
 20070319
 	emu/port/devsrv.c and os/port/devsrv.c delete wc at correct time
 20070312
